Twofish algorithm (thanks to mugwort-rc)
updated coding style
makefile creates libEncryptions.a
Added file to use Known Answer Test function + makefile

--- a/common/Makefile
+++ b/common/Makefile
@@ -1,16 +1,15 @@
 # common files Makefile
-
-CC=g++
+CXX?=g++
 LFLAGS=
 CFLAGS=-std=c++11 -Wall -c
 
 all: includes.o integer.o
 
 includes.o: includes.cpp includes.h
-	$(CC) $(CFLAGS) includes.cpp
+	$(CXX) $(CFLAGS) includes.cpp
 
 integer.o: integer.cpp integer.h
-	$(CC) $(CFLAGS) integer.cpp
+	$(CXX) $(CFLAGS) integer.cpp
 
 clean:
 	rm -f *.o
