--- a/.travis.yml
+++ b/.travis.yml
@@ -24,6 +24,6 @@ before_install:
   - if [ "$CXX" == "clang++" ]; then export CXX="clang++-3.4"; fi
 
 before_script:
-  - cd test && make
+  - cd tests && make
 
-script: ./test
+script: ./tests
