Quick Makefile update

--- a/common/Makefile
+++ b/common/Makefile
@@ -1,14 +1,17 @@
-# common files Makefile
+# common Makefile
 CXX?=g++
 LFLAGS=
 CFLAGS=-std=c++11 -Wall -c
 
+debug: CFLAGS += -g
+debug: all
+
 all: includes.o integer.o
 
-includes.o: includes.cpp includes.h
+includes.o: includes.h includes.cpp
 	$(CXX) $(CFLAGS) includes.cpp
 
-integer.o: integer.cpp integer.h
+integer.o: integer.h integer.cpp
 	$(CXX) $(CFLAGS) integer.cpp
 
 clean:
