--- a/common/Makefile
+++ b/common/Makefile
@@ -1,18 +1,19 @@
 # common Makefile
 CXX?=g++
-LFLAGS=
-CFLAGS=-std=c++11 -Wall -c
+CXXFLAGS=-std=c++11 -Wall -c
 
-debug: CFLAGS += -g
+debug: CXXFLAGS += -g
 debug: all
 
 all: includes.o integer.o
 
+.PHONY: clean
+
 includes.o: includes.h includes.cpp
-	$(CXX) $(CFLAGS) includes.cpp
+	$(CXX) $(CXXFLAGS) includes.cpp
 
 integer.o: integer.h integer.cpp
-	$(CXX) $(CFLAGS) integer.cpp
+	$(CXX) $(CXXFLAGS) integer.cpp
 
 clean:
 	rm -f *.o
