Reorganized structure and updated license

--- a/.gitignore
+++ b/.gitignore
@@ -1,39 +1,7 @@
 # Build results
-
-[Dd]ebug/
-[Rr]elease/
-x64/
-build/
-[Bb]in/
-[Oo]bj/
 *.o
 *.a
 *.exe
 
-#############
-## Windows detritus
-#############
-
-# Windows image file caches
-Thumbs.db
-ehthumbs.db
-
-# Folder config file
-Desktop.ini
-
-# Recycle Bin used on file shares
-$RECYCLE.BIN/
-
-#############
-## Python
-#############
-
-*.py[co]
-
-#############
-## Code::Blocks stuff
-#############
-
-*.depend
-*.layout
-*.cbTemp
+# Others
+*.bak
