Changed sources.make to objects.mk

--- a/common/Makefile
+++ b/common/Makefile
@@ -2,13 +2,12 @@
 CXX?=g++
 CXXFLAGS=-std=c++11 -Wall -c
 
-include sources.make
-OBJECTS=$(COMMON_SOURCES:.cpp=.o)
+include objects.mk
 
 debug: CXXFLAGS += -g
 debug: all
 
-all: $(OBJECTS)
+all: $(COMMON_OBJECTS)
 
 .PHONY: clean
 
@@ -16,4 +15,4 @@ all: $(OBJECTS)
 	$(CXX) $(CXXFLAGS) $< -o $@
 
 clean:
-	rm -f $(OBJECTS)
+	rm -f $(COMMON_OBJECTS)
