--- a/.travis.yml
+++ b/.travis.yml
@@ -7,23 +7,32 @@ compiler:
   - gcc
 
 before_install:
-  # g++4.8.1
   - if [ "$CXX" == "g++" ]; then sudo add-apt-repository -y ppa:ubuntu-toolchain-r/test; fi
 
-  # clang 3.4
   - if [ "$CXX" == "clang++" ]; then sudo add-apt-repository -y ppa:h-rayflood/llvm; fi
 
   - sudo apt-get update -qq
 
-  # g++4.8.1
-  - if [ "$CXX" = "g++" ]; then sudo apt-get install -qq g++-4.8; fi
-  - if [ "$CXX" = "g++" ]; then export CXX="g++-4.8"; fi
+install:
+  - if [ "$CXX" = "g++" ]; then sudo apt-get install -qq g++-6; fi
+  - if [ "$CXX" = "g++" ]; then export CXX="g++-6"; fi
 
-  # clang 3.4
   - if [ "$CXX" == "clang++" ]; then sudo apt-get install --allow-unauthenticated -qq clang-3.4; fi
   - if [ "$CXX" == "clang++" ]; then export CXX="clang++-3.4"; fi
 
-before_script:
-  - cd tests && make
+  - sudo apt-get install -qq git cmake
 
-script: ./tests
+before_script:
+  # not much better than git submodules, but there was never a need/want for the repo in this repo
+  - cd ..
+  - git clone https://github.com/google/googletest.git
+  - cd googletest
+  - git reset --hard d62d6c6556d96dda924382547c54a4b3afedb22c
+  - cmake CMakeLists.txt
+  - make
+
+  - cd Encryptions/tests
+  - make
+
+script:
+  - make run
