Changed Skipjack test vectors
Not sure why NESSIE test vectors all fail

--- a/tests/testcases/Makefile
+++ b/tests/testcases/Makefile
@@ -9,7 +9,7 @@ debug: all
 
 all: $(ENCRYPTIONS_TESTCASES_OBJECTS)
 
-%.o : %.cpp
+%.o : %.cpp testvectors/plainkeycipher.h
 	$(CXX) $(CXXFLAGS) $< -o $@
 
 clean:
