Update .travis.yml and moved testcases into tests directory

--- a/tests/Makefile
+++ b/tests/Makefile
@@ -1,33 +1,32 @@
 # Encryptions Library Test Makefile
 CXX?=g++
-CXXFLAGS=-std=c++11 -Wall -g -I../../googletest/googletest/include -I..
-LDFLAGS=-lEncryptions -L.. -L../../googletest/googlemock/gtest -lgtest -lpthread
+CXXFLAGS=-std=c++11 -Wall -g -D_POSIX_C_SOURCE=200809L -I../../googletest/googletest/include -I..
+LDFLAGS=-lEncryptions -L.. -L../../googletest/build/lib -lgtest -lgtest_main -lpthread
 TARGET=tests
 
-include testcases/objects.mk
+include objects.mk
 
 debug: CXXFLAGS += -g
 debug: all
 
-.PHONY: lib testcases clean clean-all
+.PHONY: clean clean-all
 
 all: $(TARGET)
 
-lib:
+../libEncryptions.a:
 	$(MAKE) -C ..
 
-testcases:
-	$(MAKE) -C testcases
+$(ENCRYPTIONS_TESTCASES_OBJECTS): %.o : %.cpp testvectors/plainkeycipher.h
+	$(CXX) $(CXXFLAGS) -c $< -o $@
 
-$(TARGET): tests.cpp lib testcases
-	$(CXX) $(CXXFLAGS) tests.cpp $(addprefix testcases/, $(ENCRYPTIONS_TESTCASES_OBJECTS)) $(LDFLAGS) -o $(TARGET)
+$(TARGET): ../libEncryptions.a $(ENCRYPTIONS_TESTCASES_OBJECTS)
+	$(CXX) $(CXXFLAGS) $(ENCRYPTIONS_TESTCASES_OBJECTS) $(LDFLAGS) -o $(TARGET)
 
-run: $(TARGET)
+test: $(TARGET)
 	./$(TARGET)
 
 clean:
-	rm -f $(TARGET)
+	rm -f $(ENCRYPTIONS_TESTCASES_OBJECTS) $(TARGET)
 
 clean-all:  clean
-	$(MAKE) clean -C testcases
 	$(MAKE) clean-all -C ..
