--- a/.travis.yml
+++ b/.travis.yml
@@ -1,38 +1,49 @@
+# from <https://github.com/taocpp/PEGTL/blob/master/.travis.yml>
+
 language: cpp
 
-# from <http://stackoverflow.com/questions/22111549/travis-ci-with-clang-3-4-and-c11>
+os: linux
+sudo: false
 
-compiler:
-  - clang
-  - gcc
+env:
+    - CXX_COMPILER=g++-4.9
+    - CXX_COMPILER=g++-5
+    - CXX_COMPILER=g++-6
+    - CXX_COMPILER=g++-7
+    - CXX_COMPILER=g++-8
+    - CXX_COMPILER=clang++-3.8
+    - CXX_COMPILER=clang++-3.9
+    - CXX_COMPILER=clang++-4.0
+    - CXX_COMPILER=clang++-5.0
+    - CXX_COMPILER=clang++-6.0
+    - CXX_COMPILER=clang++-7
+    - CXX_COMPILER=clang++-8
+
+addons:
+    apt:
+        update: false
 
 before_install:
-  - if [ "$CXX" == "g++" ]; then sudo add-apt-repository -y ppa:ubuntu-toolchain-r/test; fi
-
-  - if [ "$CXX" == "clang++" ]; then sudo add-apt-repository -y ppa:h-rayflood/llvm; fi
-
-  - sudo apt-get update -qq
-
-install:
-  - if [ "$CXX" = "g++" ]; then sudo apt-get install -qq g++-6; fi
-  - if [ "$CXX" = "g++" ]; then export CXX="g++-6"; fi
-
-  - if [ "$CXX" == "clang++" ]; then sudo apt-get install --allow-unauthenticated -qq clang-3.4; fi
-  - if [ "$CXX" == "clang++" ]; then export CXX="clang++-3.4"; fi
-
-  - sudo apt-get install -qq git cmake
+  # ubuntu toolchain is always required
+  - sudo add-apt-repository ppa:ubuntu-toolchain-r/test -y
+  - if [[ "${CXX_COMPILER}" =~ "clang++" ]]; then wget -O - https://apt.llvm.org/llvm-snapshot.gpg.key | sudo apt-key add -; sudo apt-add-repository "deb http://apt.llvm.org/xenial/ llvm-toolchain-xenial-${CXX_COMPILER##*-} main" -y; fi
+  - sudo apt-get update
+  - sudo apt-get install "${CXX_COMPILER}" cmake pkg-config $(if [[ "${CXX_COMPILER}" =~ "clang++-" ]]; then echo llvm; fi) -y
 
 before_script:
+  - export CXX="${CXX_COMPILER}"
+  - export GTEST_COLOR=1
+
   # not much better than git submodules, but there was never a need/want for the repo in this repo
   - cd ..
   - git clone https://github.com/google/googletest.git
   - cd googletest
-  - git reset --hard d62d6c6556d96dda924382547c54a4b3afedb22c
-  - cmake CMakeLists.txt
+  - mkdir build
+  - cd build
+  - cmake ..
   - make
-
-  - cd ../Encryptions/tests
-  - make
+  - cd ../../Encryptions/tests
 
 script:
-  - ./tests
+  - make
+  - make test
